Remove correct and wrong colors for score area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h1 {
 
 h2 {
     color: var(--clr-dark);
-    font-size: clamp(1em, 3vw, 2em);
+    font-size: clamp(2em, 4vw, 4em);
 }
 
 h3 {
@@ -62,7 +62,7 @@ main {
     border-radius: 25px;
     background-color: var(--clr-dark);
     transform: scale(1);
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .choises:hover {
@@ -78,14 +78,14 @@ main {
     max-width: 200px;
     max-height: 200px;
     border-radius: 25px;
-    transition: 0.5s;
+    transition: 0.3s;
     transform: scale(1);
     margin: 1vw 2vw;
 }
 
 .choises div:hover {
     background-color: var(--clr-light);
-    transform: scale(1.3);
+    transform: scale(1.2);
     z-index: 2;
     box-shadow: 10px 10px 10px 10px var(--clr-gray);
 }
@@ -115,6 +115,23 @@ main {
     transform: scale(1);
 }
 
+.correct {
+    transform: scale(1.3);
+    background-color: green;
+    transition: 0.5s linear;
+}
+
+.wrong {
+    transform: scale(1.3);
+    background-color: red;
+    transition: 0.5s linear;
+}
+
+.draw {
+    transform: scale(1.3);
+    transition: 0.5s linear;
+}
+
 /* Scoring area */
 
 
@@ -135,12 +152,6 @@ main {
     transition: 0.5s;
     transform: scale(1);
     margin: 0 2em 0 2em;
-}
-
-.correct {
-    background-color: green;
-    transform: scale(2);
-    transition: 0.5s;
 }
 
 
